tests/ui/move-captured-variable.stderr
error[E0507]: cannot move out of `a`, a captured variable in an `FnMut` closure
  --> $DIR/move-captured-variable.rs:12:9
   |
10 |       let a = String::new();
   |           - captured outer variable
11 |       foo(|| {
12 | /         async_stream_block! { //~ ERROR cannot move out of `a`, a captured variable in an `FnMut` closure
13 | |             yield a
   | |                   -
   | |                   |
   | |                   move occurs because `a` has type `std::string::String`, which does not implement the `Copy` trait
   | |                   move occurs due to use in generator
14 | |         };
   | |          ^
   | |          |
   | |__________move out of `a` occurs here
   |            in this macro invocation

For more information about this error, try `rustc --explain E0507`.
